mutants.out/log/toml-pretty-deser-macros__src__lib.rs_line_104_col_5_001.log

*** toml-pretty-deser-macros/src/lib.rs:104:5: replace extract_type_name -> Option<syn::Ident> with Some(Default::default())

*** mutation diff:
--- toml-pretty-deser-macros/src/lib.rs
+++ replace extract_type_name -> Option<syn::Ident> with Some(Default::default())
@@ -96,20 +96,17 @@
             }
         }
     }
 
     aliases
 }
 
 fn extract_type_name(ty: &Type) -> Option<syn::Ident> {
-    match ty {
-        Type::Path(TypePath { path, .. }) => path.get_ident().cloned(),
-        _ => None,
-    }
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn extract_option_inner_type(ty: &Type) -> Option<syn::Ident> {
     // Check if this is an Option<T> type
     match ty {
         Type::Path(TypePath { path, .. }) => {
             // Check if the path ends with "Option"
             if let Some(segment) = path.segments.last() {


*** /nix/store/826jircl576xphx7a459njgqfmcbd4x5-cargo-1.95.0-nightly-2026-01-21-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=toml-pretty-deser-macros@0.1.0
       Fresh unicode-ident v1.0.22
       Fresh proc-macro2 v1.0.106
       Fresh quote v1.0.44
       Fresh syn v2.0.114
       Dirty toml-pretty-deser-macros v0.1.0 (/tmp/nix-shell.fWA0aw/cargo-mutants-toml-pretty-deser-Ha55Kf.tmp/toml-pretty-deser-macros): the file `toml-pretty-deser-macros/src/lib.rs` has changed (1770035348.279618335s, 1s after last build at 1770035347.988630827s)
   Compiling toml-pretty-deser-macros v0.1.0 (/tmp/nix-shell.fWA0aw/cargo-mutants-toml-pretty-deser-Ha55Kf.tmp/toml-pretty-deser-macros)
     Running `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type proc-macro --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=81120a598c00f9fa -C extra-filename=-f792c9db6a0b2842 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold`
     Running `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dff9d6b74d3ad59d -C extra-filename=-54b992e04b4c4902 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold`
error[E0277]: the trait bound `syn::Ident: std::default::Default` is not satisfied
   --> toml-pretty-deser-macros/src/lib.rs:104:10
    |
104 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `syn::Ident`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `toml-pretty-deser-macros` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type proc-macro --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=81120a598c00f9fa -C extra-filename=-f792c9db6a0b2842 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `toml-pretty-deser-macros` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dff9d6b74d3ad59d -C extra-filename=-54b992e04b4c4902 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold` (exit status: 1)

*** result: Failure(101)
